スクレイピングする時等に必要なのでphp-xmlも入れとく

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -34,6 +34,7 @@
           - php-mysqlnd
           - php-pdo
           - php-gd
+          - php-xml
 
       - name: source php7 enable
         shell: source /opt/remi/php70/enable
