setting tmpfiles.d for mysql
* centos7 is delete /var/run/dir's when restart server
* so, i setting the tmpfiles.d for mysqld

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -60,6 +60,9 @@
       - name: apache start
         service: name=httpd state=started enabled=on
 
+      - name: copy mysqld.conf
+        copy: src=conf/mysqld.conf dest=/etc/tmpfiles.d/mysqld.conf
+
       - name: mysqld start
         service: name=mysqld state=started enabled=on
 
